--- a/src/Components/ExpenseItems.css
+++ b/src/Components/ExpenseItems.css
@@ -3,5 +3,6 @@
    background-color: rgb(79, 85, 85);
    color:aliceblue;
 
-   border-radius: 21px;
+   border-radius: 21p x;
+   margin-bottom: 10px;
 }
